# wavs_Apps

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  foundry.toml  package-lock.json  package.json  remappings.txt
.github/: single-wavs-image-verifier.bash
.github/workflows/: contracts.yml  e2e.yml  rust.yml  wavs-image-version-verifier.yml
components/eth-price-oracle/: Cargo.toml
components/eth-price-oracle/src/: lib.rs  trigger.rs
components/openai-inference/: Cargo.toml
components/openai-inference/src/: lib.rs
components/sports-scores-oracle/: Cargo.toml  README.md
components/sports-scores-oracle/src/: bindings.rs  lib.rs  trigger.rs
docs/: benefits.mdx  design.mdx  how-it-works.mdx  index.mdx  overview.mdx
docs/tutorial/: 1-overview.mdx  2-setup.mdx  3-project.mdx  4-component.mdx  5-build.mdx  6-run-service.mdx  7-prediction.mdx
script/: .solhint.json  Common.s.sol  Deploy.s.sol  ShowResult.s.sol  Trigger.s.sol
src/contracts/: WavsSubmit.sol  WavsTrigger.sol
src/interfaces/: ITypes.sol  IWavsSubmit.sol  IWavsTrigger.sol
test/unit/: WavsTrigger.t.sol
tools/: upgrade.sh
