[package]
name = "openai-inference"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[dependencies]
wit-bindgen-rt = {workspace = true}
wavs-wasi-chain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wstd = { workspace = true }
anyhow = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:openai-inference"
target = "wavs:worker/layer-trigger-world@0.3.0"
